<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.projectakhir.betamart.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_histori"
        android:name="com.projectakhir.betamart.ui.histori.HistoriFragment"
        android:label="@string/title_histori"
        tools:layout="@layout/fragment_histori" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.projectakhir.betamart.ui.User.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>