<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/background_color"
    tools:context=".ui.User.LoginActivity">

    <!-- Logo atau Gambar Toko Buku -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_live_tv_24"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_desc"
        android:layout_marginBottom="24dp" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textColor="@color/primary_text_color"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Field Username -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_username"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <!-- Field Password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp" />

    <!-- Tombol Login -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium" />

    <!-- Tombol Register -->
    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/secondary_text_color"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="16dp" />

</LinearLayout>
